--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Threadstone</title>
-        <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="@/node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <lin rel="stylesheet" href="../node_modules/tailwindcss/base.css" />
     </head>
     <body>
         <div id="root">not rendered</div>
-        <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-        <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-        <script src="./App.ts"></script>
+        <script type="module" src="./App.ts"></script>
         <script>
             
         </script>
