--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,10 @@
         <title>Threadstone</title>
         <link rel="stylesheet" href="@/node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <lin rel="stylesheet" href="../node_modules/tailwindcss/base.css" />
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body>
         <div id="root">not rendered</div>
-        <script type="module" src="./App.ts"></script>
-        <script>
-            
-        </script>
+        <script type="module" src="./App.tsx"></script>
     </body>
 </html>
