--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="@/node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <lin rel="stylesheet" href="../node_modules/tailwindcss/base.css" />
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <div id="root">not rendered</div>
